--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ec0303;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,103 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.card-container {
+  display: grid;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  width: 20vw;
+  height: 30vh;
+  margin: 1% 1%;
+  padding: 0.5em;
+  border: solid rgb(164, 167, 12);
+  background-color: rgb(9, 58, 58);
+  /* text-align: center; */
+  color: white;
+  display: inline-block;
+  transition: .3s ease;
+}
+
+
+
+
+.cards {
+
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px,lfr));
+  padding: 20px;
+  grid-gap: 40px;
+
+
+}
+
+
+/* In this example, the card-container div is set to display as a grid with four columns, and a gap of 20px between each card. The card class sets the styles for each card. You can modify the styles as needed to achieve the desired look. */
+/* 
+.cardFront{
+  width: 100%;
+  height: 100%;
+}
+
+.cardBack{
+  height: 100%;
+  text-align: grid;
+  overflow-y: scroll;
+} */
+
+/* .cardBack h1{
+  text-align: center;
+} */
+.card-image:hover {
+  transform: scale(1.1);
+}
+
+
+h1 {
+  font-weight: 800;
+}
+
+.btn {
+  margin: 15px;
+}
+
+.overlay {
+  /* position: fit;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%; */
+  opacity: 95%;
+  transition: .3s ease;
+  background-color: rgb(128, 128, 128);
+}
+
+.overlay {
+  font-weight: bold;
+}
+
+
+a:hover {
+  color: rgb(7, 8, 1)
+}
+
+
+.card img {
+  width: 95%;
+  height: 150px; /* or any other fixed height */
+  object-fit: cover;
+}
+
+body {
+  background-image: url('assets/image2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @keyframes App-logo-spin {
